0.19.5	UNRELEASED

 BUG FIXES

  * Fix regression in ``dulwich.porcelain.clone`` that prevented cloning
    of remote repositories. (Jelmer Vernooĳ, #639)

  * Don't leave around empty parent directories for removed refs.
    (Damien Tournoud, #640)

0.19.4	2018-06-24

 IMPROVEMENTS

  * Add ``porcelain.ls_files``. (Jelmer Vernooĳ)

  * Add ``Index.items``. (Jelmer Vernooĳ)

 BUG FIXES

  * Avoid unicode characters (e.g. the digraph ĳ in my surname) in setup.cfg,
    since setuptools doesn't deal well with them. See
    https://github.com/pypa/setuptools/issues/1062. (Jelmer Vernooĳ, #637)

0.19.3	2018-06-17

 IMPROVEMENTS

  * Add really basic `dulwich.porcelain.fsck` implementation.
    (Jelmer Vernooĳ)

  * When the `DULWICH_PDB` environment variable is set, make
    SIGQUIT open pdb in the 'dulwich' command.

  * Add `checkout` argument to `Repo.clone`.
    (Jelmer Vernooĳ, #503)

  * Add `Repo.get_shallow` method. (Jelmer Vernooĳ)

  * Add basic `dulwich.stash` module. (Jelmer Vernooĳ)

  * Support a `prefix` argument to `dulwich.archive.tar_stream`.
    (Jelmer Vernooĳ)

 BUG FIXES

  * Fix handling of encoding for tags. (Jelmer Vernooĳ, #608)

  * Fix tutorial tests on Python 3. (Jelmer Vernooĳ, #573)

  * Fix remote refs created by `porcelain.fetch`. (Daniel Andersson, #623)

  * More robust pack creation on Windows. (Daniel Andersson)

  * Fix recursive option for `porcelain.ls_tree`. (Romain Keramitas)

 TESTS

  * Some improvements to paramiko tests. (Filipp Frizzy)

0.19.2	2018-04-07

 BUG FIXES

  * Fix deprecated Index.iterblobs method.
    (Jelmer Vernooĳ)

0.19.1	2018-04-05

 IMPROVEMENTS

  * Add 'dulwich.mailmap' file for reading mailmap files.
    (Jelmer Vernooĳ)

  * Dulwich no longer depends on urllib3[secure]. Instead,
    "dulwich[https]" can be used to pull in the necessary
    dependencies for HTTPS support. (Jelmer Vernooĳ, #616)

  * Support the `http.sslVerify` and `http.sslCAInfo`
    configuration options. (Jelmer Vernooĳ)
